Do not move the on-screen keyboard to another display after loading an IME.

BUG=670617
TEST=Show the on-screen keyboard on non-touchable display and
     switch to another IME; then check that the on-screen keyboard
     remains on the same display.

Review-Url: https://codereview.chromium.org/2546963002
Cr-Commit-Position: refs/heads/master@{#443177}